--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "jquery": "^3.6.0",
         "loader": "^2.1.1",
         "popper.js": "^1.16.1",
-        "sass": "^1.35.1"
+        "sass": "^1.35.1",
+        "sass-loader": "^12.0.0"
     }
 }
